# GTestApp

./: .gitignore  CMakeLists.txt  README.md
src/exe/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/impl/: student.cpp
src/lib/include/: student.h
test/test1/: CMakeLists.txt  test1.cpp
test/test2/: CMakeLists.txt  test2.cpp
